--- a/src/email/templates/email.handlebars
+++ b/src/email/templates/email.handlebars
@@ -190,8 +190,8 @@
                                 <h2>{{heading}}</h2>
 
                                 <p style="text-transform: capitalize;">Hi {{name}} 👋,</p>
-                                <p>{{message}}
-                                </p>
+                                <div>{{message}}
+                                </div>
 
                             </div>
 
