update email teplate

--- a/src/email/templates/email.handlebars
+++ b/src/email/templates/email.handlebars
@@ -190,7 +190,7 @@
                                 <h2>{{heading}}</h2>
 
                                 <p style="text-transform: capitalize;">Hi {{name}} 👋,</p>
-                                <div>{{message}}
+                                <div>{{{message}}}
                                 </div>
 
                             </div>
